@@ -11,9 +11,12 @@ const run = ({messageText, sendMessage}) => {
 }
 
 const patchNotes =
+	'2020/09/30\n' +
+	'• Shorthands are now dynamic rather than hardcoded.\n' +
+	'• meme command now honors line breaks in input.\n' +
 	'2020/09/16\n' +
 	'• Shorthands for long pieces of text: !navy and !has.\n' +
-	'• meme command works with metacommands\n' +
+	'• meme command works with metacommands.\n' +
 	'2020/09/15\n' +
 	'• User avatar appears behind meme text.\n' +
 	'• Ability to delete bugs through Discord.\n' +
